<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.motanad.motanad.activity.ChangePassword">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_20"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eTextOldPass"
            style="@style/edit_text_style_change_password"
            android:hint="@string/old_password"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/light_gray"/>

        <EditText
            android:id="@+id/eTextNewPass"
            style="@style/edit_text_style_change_password"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/light_gray"/>

        <EditText
            android:id="@+id/eTextConfirmPassCP"
            style="@style/edit_text_style_change_password"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"/>

        <com.motanad.motanad.custome.ButtonViewRegular
            android:id="@+id/btnSubmitCP"
           style="@style/button_styple_login_signup"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/Submit"/>
    </LinearLayout>

</LinearLayout>
